--- a/app.json
+++ b/app.json
@@ -13,11 +13,11 @@
             "value": ""
         },
         "API_ID": {
-            "description": "Get this value from https://my.telegram.org",
+            "description": "Get this value from https://t.me/ScrapperRoBot",
             "value": ""
         },
         "API_HASH": {
-            "description": "Get this value from https://my.telegram.org",
+            "description": "Get this value from https://t.me/ScrapperRoBot",
             "value": ""
         },
         "API_KEY": {
